# dscoursework

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  README.md  docker-compose.prod.yml  docker-compose.test.yml
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
TODO/: dsc-es.yaml  dsc-ss.yaml
api/postman/: collection.json  environment.json
bonus_service/: Cargo.toml
bonus_service/src/: main.rs  schema.rs
deployment/: .env.template  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
deployment/bonus_service/: Dockerfile
deployment/flight_service/: Dockerfile
deployment/gateway_service/: Dockerfile
deployment/hashivault/: vault.json
deployment/image_service/: Dockerfile
dscoursework-backend/: Cargo.toml
dscoursework-backend/bonus-service-api/: Cargo.toml  README.md
dscoursework-backend/bonus-service-api/docs/: BalanceHistory.md  BonusRestapiOperationsApi.md  ErrorResponse.md  PrivilegeRequest.md  PrivilegeResponse.md  ValidationErrorResponse.md
dscoursework-backend/bonus-service-api/src/models/: mod.rs  privilege_full_info.rs  privilege_request.rs  privilege_short_info.rs
dscoursework-backend/bonus_service/: Cargo.toml  Dockerfile
dscoursework-backend/bonus_service/migrations/2023-10-14-101625_create_privilege/: down.sql
dscoursework-backend/bonus_service/migrations/2023-10-14-101638_create_privilege_history/: down.sql  up.sql
dscoursework-backend/bonus_service/src/: config.rs  main.rs  state.rs
dscoursework-backend/bonus_service/src/app/: api.rs  models.rs  repository.rs
dscoursework-backend/bonus_service/src/app/api/: privilege_controller.rs
dscoursework-backend/bonus_service/src/app/repository/: statistics_repository.rs
dscoursework-backend/bonus_service/src/app/service/: privilege_service.rs  privilege_service_impl.rs
dscoursework-backend/flight-service-api/: Cargo.toml  README.md
dscoursework-backend/flight-service-api/docs/: AirportResponse.md  FlightResponse.md  FlightRestapiOperationsApi.md  FlightsRestapiOperationsApi.md  PaginationResponse.md
dscoursework-backend/flight-service-api/src/models/: airport_response.rs
dscoursework-backend/flight_service/: .dockerignore  Cargo.toml  Dockerfile
dscoursework-backend/flight_service/migrations/2023-10-14-091159_create_airports/: down.sql
dscoursework-backend/flight_service/migrations/2023-10-14-091203_create_flights/: down.sql
dscoursework-backend/flight_service/src/: app.rs  config.rs  main.rs  schema.rs  state.rs
dscoursework-backend/flight_service/src/app/: api.rs  repository.rs
dscoursework-backend/flight_service/src/app/api/: error.rs  flight_controller.rs  state.rs
dscoursework-backend/flight_service/src/app/repository/: database_executor.rs  flight_repository.rs  flight_repository_handlers.rs  statistics_repository.rs
dscoursework-backend/flight_service/src/app/service/: flight_service.rs  flight_service_impl.rs  service_error.rs
dscoursework-backend/gateway_service/: Cargo.toml  Dockerfile
dscoursework-backend/gateway_service/src/: api.rs  config.rs  endpoint.rs  main.rs  models.rs  repository.rs  state.rs
dscoursework-backend/gateway_service/src/api/: auth.rs  error.rs  gateway_controller.rs  jwk_auth.rs  retryer_middleware.rs
dscoursework-backend/gateway_service/src/models/: privilege_request.rs  privilege_short_info.rs
dscoursework-backend/gateway_service/src/repository/: statistics_repository.rs
dscoursework-backend/gateway_service/src/service/: gateway_service_impl.rs  service_error.rs
dscoursework-backend/image_service/: Cargo.toml
dscoursework-backend/image_service/src/: main.rs
dscoursework-backend/shared/: Cargo.toml
dscoursework-backend/shared/src/: auth.rs
dscoursework-backend/shared/src/auth/: authentik_auth.rs  okta_auth.rs
dscoursework-backend/statistics_service/: Dockerfile  go.mod  go.sum  main.go  template.html
dscoursework-backend/ticket-service-api/: Cargo.toml  README.md
dscoursework-backend/ticket-service-api/docs/: TicketRequest.md  TicketResponse.md  TicketRestapiOperationsApi.md
dscoursework-backend/ticket-service-api/src/apis/: ticket_restapi_operations_api.rs
dscoursework-backend/ticket_service/: Cargo.toml  Dockerfile
dscoursework-backend/ticket_service/migrations/2023-10-22-090204_create_tickets/: down.sql  up.sql
dscoursework-backend/ticket_service/src/: app.rs  config.rs  main.rs  state.rs
dscoursework-backend/ticket_service/src/app/: api.rs  infra.rs  repository.rs  service.rs
dscoursework-backend/ticket_service/src/app/api/: ticket_controller.rs
dscoursework-backend/ticket_service/src/app/infra/: error_reporter.rs  kafka_reporter.rs
dscoursework-backend/ticket_service/src/app/repository/: statistics_repository.rs
dscoursework-backend/ticket_service/src/app/service/: service_error.rs  ticket_service_impl.rs
dscoursework-frontend/: nx.json  package-lock.json  package.json  project.json  proxy.conf.json  proxy.config.json
flight_service/: Cargo.toml  Dockerfile
flight_service/src/: config.rs  main.rs
flight_service/src/app/: domain.rs  service.rs
flight_service/src/app/api/: auth_token.rs  error_controller.rs
flight_service/src/app/models/: flight_response.rs  pagination_response.rs
flight_service/src/app/repository/: flight_repository.rs
frontend/: jest.config.ts  nx.json  package-lock.json  project.json
gateway_service/: Cargo.toml
gateway_service/core/: Cargo.toml
gateway_service/core/src/: config.rs  main.rs  models.rs  state.rs
gateway_service/core/src/endpoint/: error_controller.rs  retryer_middleware.rs
gateway_service/core/src/models/: privilege_full_info.rs  ticket_purchase_request_jwt.rs  ticket_request.rs  user_info_response.rs
init_db/: 20-create-database.sql
jwt_identity_provider/: go.sum  main.go
oidc_identity_provider/: Dockerfile  go.sum  main.go  service-key1.json
rabbitmq/: Dockerfile
retryer_service_rabbit/: Cargo.toml  Dockerfile
retryer_service_rabbit/src/: main.rs  rmq.rs
statistics_service/: Dockerfile  go.sum  main.go  template.html
ticket_service/: Cargo.toml
(+260 files in other folders)
