[workspace]
members = [
    "bonus_service",
    "flight_service",
    "gateway_service",
    "image_service",
    "shared",
    "ticket_service"
]
resolver = "2"

[workspace.package]
name = "dscoursework"
version = "0.1.0"
description = "A short description of my package"
readme        = "../README.md"
homepage      = "https://github.com/squeakbug/dscoursework"
repository    = "https://github.com/squeakbug/dscoursework"
documentation = "https://github.com/squeakbug/dscoursework"

[workspace.dependencies]
actix = "0.13"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.4"
actix-web-validator = "5.0.1"
anyhow = "1.0.51"
async-trait = "0.1.73"
bytes = "1.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.3"
derive_more = "~0.99"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
num_cpus = "1.13.0"
once_cell = "1.18.0"
r2d2 = "0.8.10"
rdkafka = "0.36.2"
deadpool = "0.12.1"
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
failsafe = "1.3.0"
lapin = "2.5.0"
deadpool-lapin = "0.12.1"
thiserror = "~1.0"
minio-rsc = "0.2.2"
tokio = "1.32"
tokio-timer = "0.2"
tokio-amqp = "2.0.0"
uuid = { version = "^1.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
url = "^2.2"

[workspace.dependencies.diesel]
version = "2.1.1"
features = ["postgres", "r2d2", "uuid"]
