[package]
authors = ["squeakbug <squeakbug73@outlook.com>"]
name = "flight-service"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
actix = "0.13"
actix-web = "4.4"
actix-web-validator = "5.0.1"
anyhow = "1.0.51"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "~0.99"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
r2d2 = "0.8.10"
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
uuid = { version = "^1.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }

[dependencies.diesel]
features = ["postgres", "r2d2", "uuid", "chrono"]
version = "2.1.1"
