[package]
authors = ["squeakbug <squeakbug73@outlook.com>"]
name = "retryer-service"
version = "0.0.1"
edition = "2021"
license= "MIT"

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
thiserror = "~1.0"
futures = "0.3.28"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
deadpool = "0.9.0"
deadpool-lapin = "0.9.0"
lapin = "1.8.0"
tokio-amqp = "1.0.0"
tokio = { version = "1.12.0", features = ["macros", "time", "rt-multi-thread"] }