[package]
authors = ["squeakbug <squeakbug73@outlook.com>"]
name = "flight-service"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
shared = { path = "../shared" }

actix.workspace = true
actix-web.workspace = true
actix-web-validator.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
dotenv.workspace = true
env_logger.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
r2d2.workspace = true
rdkafka.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true

[dependencies.diesel]
features = ["postgres", "r2d2", "uuid", "chrono"]
version = "2.1.1"
