[package]
authors = ["squeakbug <squeakbug73@outlook.com>"]
name = "gateway-service"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
shared = { path = "../shared" }
bonus_service_api = { path = "../bonus-service-api" }
flight_service_api = { path = "../flight-service-api" }
ticket_service_api = { path = "../ticket-service-api" }

actix.workspace = true
actix-rt.workspace = true
actix-web.workspace = true
actix-web-validator.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
config.workspace = true
derive_more.workspace = true
dotenv.workspace = true
env_logger.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true
failsafe.workspace = true
deadpool.workspace = true
deadpool-lapin.workspace = true
lapin.workspace = true
tokio-amqp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
rdkafka.workspace = true
