[package]
authors = ["squeakbug <squeakbug73@outlook.com>"]
name = "gateway-service"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
actix = "0.13"
actix-rt = "2.9.0"
actix-web = "4.4"
actix-web-validator = "5.0.1"
async-trait = "0.1.73"
bonus_service_api = { path = "../bonus-service-api" }
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.3"
derive_more = "~0.99"
dotenv = "0.15.0"
env_logger = "0.10.0"
flight_service_api = { path = "../flight-service-api" }
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
num_cpus = "1.13.0"
once_cell = "1.18.0"
reqwest = "0.11.12"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
thiserror = "~1.0"
failsafe = "1.2.0"
zmq = "0.10.0"
tmq = "0.4.0"
async_zmq = "0.4.0"
deadpool = "0.9.0"
deadpool-lapin = "0.9.0"
lapin = "1.8.0"
tokio-amqp = "1.0.0"
ticket_service_api = { path = "../ticket-service-api" }
uuid = { version = "^1.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
